[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.29", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.6"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"           
lz4_flex = "0.11"      
flate2 = { version = "1.0", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"]}
uuid = { version = "1.3", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.29", features = ["full"] }
